In update_client, emit different events in the noupdate and update error cases.

R: waffles
Bug: 804472
Change-Id: I0425bcea8cd82386dbcd0fe63fa696e60a468af2